# nts-wip-dont-lookat-this-shi

./: .clangd.template  .gitignore  AndroidManifest.xml  Makefile  README-chn.md  README.md  build.sh.template  build_common.mk  kate-lspclient-settings.json.template
common/: adapt.c  adapt.h  host_info.h
host-linux/: .gitignore  99-nts-uinput.rules  CMakeLists.txt  FindDialog.cmake  README-chn.md  README.md  accessory.c  accessory.h  config.h.in  dlg_lsusb.c  dlg_lsusb.h  host_info.c  libusb_stuffs.h  main.c  recv.c  recv.h  uinput.c  uinput.conf  uinput.h
host-linux/l10n/: .gitignore  CMakeLists.txt  NtsHostLinux.pot  ja.po  nls_wrap.h  regen_all.sh  utils.c  utils.h  zh_CN.po
inc/: android_accessory.h  nts_accessory.h  protocol.h
java/com/example/app/: MainActivity.java
java/com/notabletsar/app/: BaseFullscreenActivity.java  ControllerActivity.java  MainActivity.java  NTSAccessory.java
jni/: com_example_app_MainActivity.h  com_notabletsar_app_ControllerActivity.h  lib.c
res/layout/: main_activity.xml
res/values/: strings.xml
res/values-ja/: strings.xml
res/values-zh/: strings.xml
